<resources>
    <string name="app_name">Trouver Soiree</string>
    <string name="mapKey">AIzaSyBf03qezXGPyW4nbcbu2rdC33uzSEfI8VY</string>
    <string name="barvin">Bar à vins</string>




    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fastfood">Fast-food</string>
    <string name="thai">Thaï</string>
    <string name="chinois">Chinois</string>
    <string name="jap">Japonais</string>
    <string name="indien">Indien</string>
    <string name="afro">Africain</string>
    <string name="oriental">Oriental</string>
    <string name="americain">Américain</string>
    <string name="fr">Français</string>
    <string name="latino">Latino</string>
    <string name="italien">Italien</string>
    <string name="suivant">Suivant</string>
    <string name="barbiere">Bar à bières</string>
    <string name="barvins">Bar à vins</string>
    <string name="barcocktails">Bar à cocktails</string>
    <string name="barchicha">Bar à chicha</string>
</resources>
