<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.trouversoiree.ChoixParamsBarFrag">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/choixparamrestau"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:text="Veuillez choisir vos préférences pour le bar (facultatif)"
        android:textSize="15sp" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:layout_marginTop="16dp"
        android:background="#FF909090" />

    <CheckBox
        android:id="@+id/checkBox5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/barbiere" />

    <CheckBox
        android:id="@+id/checkBox6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/barvins" />

    <CheckBox
        android:id="@+id/checkBox7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/barcocktails" />

    <CheckBox
        android:id="@+id/checkBox8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/barchicha" />

    <Button
        android:id="@+id/button_val_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/suivant" />


</LinearLayout>